# misc

./: .gitignore  CMakeLists.txt  README.md
cmake/Modules/: FindDLIB.cmake
docker/: makefile
docker/openuxas/: Dockerfile  docker-compose.yml
gui/widget-test/: list.xml  main_dialog.py  main_dialog.ui  my_custom_widget.py  run_dialog.py
gui/widget-test/graveyard/: mycustomwidgetplugin.py
notes/: neo-reading-list.md
python/: env_var.py  gps_avg.py  str_replace.py  surfaces.py
python/nn/: nn.py  pg-pong.py
python/pytorch/: test.py
python/slam/: rotations.py
python/stats/: test.py
python/tf/: mnist_deep.py  mnist_softmax.py
scripts/: kevin.py  ompl-path-viz.py
src/: CMakeLists.txt
src/boost-python/: CMakeLists.txt  main.cpp
src/bullet-tests/: CMakeLists.txt  collision-only.cpp  hello-bullet.cpp
src/ceres/: CMakeLists.txt  helloworld.cc  powell.cc  random.h  robot_pose_mle.cc
src/cpp-practice/: CMakeLists.txt  bits.cpp  main1.cpp  main2.cpp  main3.cpp  opencv-rtsp.cpp  pointers.cpp  serial.cpp  weak_pointers.cpp
src/dlib/: CMakeLists.txt  mpc_ex.cpp  optimization_ex.cpp
src/embed-python/: CMakeLists.txt  main.cpp
src/hello-world/: CMakeLists.txt  main.cpp
src/multiple-jsbsim/: CMakeLists.txt  main.cpp
src/ompl-tut/: CMakeLists.txt  main.cpp  ompl-car.cpp  ompl-optimal.cpp  planOpenDE.cpp
src/script-jsbsim/: CMakeLists.txt  main.cpp
src/vtk-test/: CMakeLists.txt  main.cpp
