add_executable(main1 main1.cpp)
add_executable(main2 main2.cpp)
add_executable(main3 main3.cpp)
add_executable(pointers pointers.cpp)

set(CMAKE_PREFIX_PATH ${CMAKE_PREFIX_PATH} /opt/ros/kinetic)
find_package(OpenCV)
include_directories(${OpenCV_INCLUDE_DIRS})
add_executable(opencv-rtsp opencv-rtsp.cpp)
target_link_libraries(opencv-rtsp ${OpenCV_LIBS})
#target_link_libraries(OpenCV)
